# AICodeGraph

./: .gitignore  Cargo.toml  README.md
src/: llm.rs  main.rs  tools.rs
src/tools/: explore.rs  grep.rs  read_file.rs  scratch.rs
