[package]
name = "aicodegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
rig = { package = "rig-core", version = "0.39.0" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
