[package]
name = "aicodegraph"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aicg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rig = { package = "rig-core", version = "0.39.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"
